2021/10/14	Reconciling the randomizer (the first of two rounds).
		This will introduce variability of output in the 1991 translation, which arises, in part, from the use of srand().
		Therefore, ‟make test” will not always produce an exact match for test outputs anymore.
		This will be fixed for both C translations and the Fortran version later, when they are fully reconciled.
2021/10/14-15	Normalizing the record format in the story file (the first of two rounds).
2021/10/21	Revising the database decompiler to better reflect the structure of the exit table.
2021/10/23	Reconciling and upgrading the random number generator.
2021/10/24-25	Reconciling and upgrading the time-related functions and reseeding the random number generator with it.
		This changes the format of the ‟dsave.dat” game-state file.
2021/10/25	Add command-line arguments and use this to control the randomizer for the test routines.
		‟make test” is now fully operational.
2021/10/26	Removed absolute references to the strings file in the index file to the message table, rtext[].
		This undoes the resizing of rtext[] in the 2021 version in 2021/10/12, and resizes it in the 1991 version instead.
2021/10/28	Reindexed the message table rtext[] in dindx.dat and the string table in dtext.dat such that:
		∙	duplicate relative indexes to rtext[] from the tables in ‟dindx.dat” are removed,
			there are 149 duplicates in the 2021 version,
		and
		∙	duplicate strings in the string table are removed,
			there are 158 duplicates in the 2021 version.
		The ideal is to allow all duplicate indices in rtext[] to ‟dtext.dat”, there are 9 in the 1991 version.
		They cannot be eliminated without analyzing the source code to find all the places where rtext[] indices occur.
2021/10/30-31	Reindexed the string table in the story file; revised the version history contained in it.
		This is now version 2.8B
2021/10/31	Added the Zork.6 man page, from C1991, to C2021.